--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-google-charts": "^4.0.1",
+    "react-zoom-pan-pinch": "^3.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
