--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prompts": "^2.4.2",
     "tailwindcss": "^3.3.0"
   }
 }
